# theCourseForum2

./: .coveragerc  .dockerignore  .env.example  .env.travis  .eslintignore  .gcloudignore  .gitattributes  .gitignore  .nvim.lua  .pre-commit-config.yaml  .prettierignore  .pylintrc  .travis.yml  .zshrc  Dockerfile  FOR-DEVS.md  LousListScript.md  Procfile  README.md  SIS_2023_spring.csv  Vagrantfile  app.yaml  app.yaml.template  bootstrap_vagrant.sh  celerybeat-schedule  club.md  dfsdf4  docker-compose.prod.yml  docker-compose.yml  flake.nix  gae-service-account.json.enc  load_data  lous.csv  manage.py  package-lock.json  package.json  precommit  precommit.sh  pull_request_template.md  pyproject.toml  (+9 more)
.config/: .env.example  .env.travis  .eslintrc.yml  .markdownlint.yml  app.yaml.template
.githooks/: pre-commit
.github/: django.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/actions/: install-dependencies.yaml
.github/workflows/: aws.yml  ci.yml  codeql-analysis.yml  continuous-integration.yml  (+4 more)
assets/: study_guide.js
db/: LousListScript.md  add_missing_instructor_emails.sql  dbschema.dbml  export_mapping_table.sql  latest.sql  link_courseinstructorgrade_to_instructor.sql
doc/: dev.md  grade-data.md  parity_tracker.md  semester-data.md  useful-commands.md  v2_parity_tracker.md
docs/: FOR-DEVS.md  dev.md  useful-commands.md
iac/: .gitignore  acm.tf  alb.tf  branding-settings.json  cloudfront.tf  cloudwatch.tf  cognito.tf  data.tf  ecr.tf  ecs.tf  elasticache.tf  iam.tf  locals.tf  main.tf  networking.tf  outputs.tf  rds.tf  route53.tf  s3.tf  secrets.tf  security-groups.tf  terraform.tf  variables.tf
k6/: .gitignore  README.md  config.js  medium-load.js  peak-load.js  regular-load.js  scenarios.js  smoke-test.js  spike-test.js  stress-test.js
legacy_db/: legacy_models.py  mysql2sqlite  mysql2sqlite2
requirements/: base.txt  ci.txt  dev.txt
scripts/: backup-db.sh  container-startup.sh  dump.sh  ecs-run-command.sh  format.bat  format.sh  hide_review.sh  list_ai_summaries.sh  local_dump.sh  notify-checks-result.sh  notify-deployment-result.sh  notify-discord.sh  prod_dump.sh  prune-gh-branches.sh  reset-db.bat  reset-db.sh  setup.sh
seleniumtests/: browse_selenium_test.py  course_page_selenium_test.py  selenium_test.py  test_utils.py  utils_selenium_test.py
semester_data/: 2009spring.csv  2010fall.csv  2010january.csv  2010summer.csv  2011fall.csv  2011spring.csv  2011summer.csv  2012january.csv  2012spring.csv  2013spring.csv  2013summer.csv  2014spring.csv  2014summer.csv  2015fall.csv  2015january.csv  2015summer.csv  2016january.csv  2016spring.csv  2016summer.csv  2017fall.csv  2017january.csv  2017spring.csv  2018january.csv  2019fall.csv  2019january.csv  2019spring.csv  2019summer.csv  2020january.csv  2020summer.csv  CSV Parsing.ipynb  fetch_data.py
tcf_core/: asgi.py  auth_pipeline.py  cognito_middleware.py  context_processors.py  health.py  request_logging.py  settings.py  tcf_core_nginx.conf  urls.py  wsgi.py
tcf_website/: __init__.py  admin.py  analytics_utils.py  apps.py  auth_backends.py  auth_helper.py  forms.py  legacy_models.py  microsoft-identity-association.json  models.py  pagination.py  signals.py  stat_display.py  tasks.py  urls.py  utils.py
test_django_app/: .dockerignore  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
test_django_app/requirements/: base.txt  dev.txt  prod.txt
test_django_app/scripts/: container-startup.sh
test_django_app/tcf_core/: asgi.py  wsgi.py
test_django_app/tcf_core/settings/: base.py  local.py  prod.py
(+3777 files in other folders)
